--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "build": "webpack",
     "prestart": "npm run build",
-    "start": "node js/client-entry.js"
+    "start": "node server/server-entry.js"
   },
   "author": "",
   "license": "ISC",
@@ -14,6 +14,7 @@
     "babel-core": "^6.14.0",
     "babel-loader": "^6.2.5",
     "babel-preset-es2015": "^6.14.0",
+    "babel-preset-node5": "^11.1.0",
     "webpack": "^1.13.2",
     "webpack-dev-server": "^1.15.1"
   },
