--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "dependencies": {
     "express": "^4.14.0",
     "firebase": "^3.3.0",
+    "lodash": "^4.15.0",
     "webpack-config": "^6.1.2"
   }
 }
