--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "js/client-entry.js",
   "scripts": {
+    "lint": "eslint ./js",
     "dev": "webpack-dev-server",
     "prestart": "npm run build",
     "build": "NODE_ENV=production ./node_modules/webpack/bin/webpack.js --config ./webpack.prod.config.js --progress --colors",
@@ -17,6 +18,7 @@
     "babel-loader": "^6.2.5",
     "babel-preset-es2015": "^6.14.0",
     "babel-preset-node5": "^11.1.0",
+    "eslint": "^3.8.1",
     "underscore": "^1.8.3",
     "webpack": "^1.13.2",
     "webpack-dev-server": "^1.15.1"
@@ -25,6 +27,8 @@
     "express": "^4.14.0",
     "firebase": "^3.3.0",
     "lodash": "^4.15.0",
+    "react": "^15.3.2",
+    "react-dom": "^15.3.2",
     "webpack-config": "^6.1.2"
   }
 }
