--- a/package.json
+++ b/package.json
@@ -14,20 +14,32 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "babel": "^6.5.2",
     "babel-core": "^6.14.0",
     "babel-loader": "^6.2.5",
     "babel-preset-es2015": "^6.14.0",
+    "babel-preset-react": "^6.0.15",
     "babel-preset-node5": "^11.1.0",
+    "babel-preset-stage-0": "^6.0.15",
     "eslint": "^3.8.1",
     "underscore": "^1.8.3",
     "webpack": "^1.13.2",
     "webpack-dev-server": "^1.15.1"
   },
   "dependencies": {
+    "babel": "^6.5.2",
+    "babel-core": "^6.13.1",
+    "babel-loader": "^6.0.1",
+    "babel-preset-es2015": "^6.0.15",
+    "babel-preset-react": "^6.0.15",
+    "babel-preset-stage-0": "^6.0.15",
+    "babel-preset-stage-2": "^6.11.0",
+    "es6-promise": "^3.3.1",
     "express": "^4.14.0",
     "firebase": "^3.3.0",
     "lodash": "^4.15.0",
     "react": "^15.3.2",
+    "react-hot-loader": "^1.3.0",
     "react-dom": "^15.3.2",
     "webpack-config": "^6.1.2"
   }
