--- a/package.json
+++ b/package.json
@@ -18,10 +18,17 @@
     "babel-core": "^6.14.0",
     "babel-loader": "^6.2.5",
     "babel-preset-es2015": "^6.14.0",
-    "babel-preset-react": "^6.0.15",
     "babel-preset-node5": "^11.1.0",
+    "babel-preset-react": "^6.0.15",
     "babel-preset-stage-0": "^6.0.15",
+    "css-loader": "^0.25.0",
+    "enzyme": "^2.5.1",
     "eslint": "^3.8.1",
+    "jasmine": "^2.5.2",
+    "karma": "^1.3.0",
+    "mocha": "^3.1.2",
+    "react-addons-test-utils": "^15.3.2",
+    "style-loader": "^0.13.1",
     "underscore": "^1.8.3",
     "webpack": "^1.13.2",
     "webpack-dev-server": "^1.15.1"
