--- a/package.json
+++ b/package.json
@@ -27,10 +27,12 @@
     "jasmine": "^2.5.2",
     "karma": "^1.3.0",
     "mocha": "^3.1.2",
+    "node-sass": "^3.11.2",
     "react-addons-test-utils": "^15.3.2",
+    "sass-loader": "^4.0.2",
     "style-loader": "^0.13.1",
     "underscore": "^1.8.3",
-    "webpack": "^1.13.2",
+    "webpack": "^1.13.3",
     "webpack-dev-server": "^1.15.1"
   },
   "dependencies": {
